# neodm

./: .envrc  .gitignore  .nvimrc  .vimspector.json  CMakeLists.txt  README.md  TODO.md  shell.nix
core/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/launcher/: extern.cpp  extern.hpp  launcher.cpp  launcher.hpp  sw_about.cpp  sw_about.hpp  sw_active.cpp  sw_active.hpp  sw_key_bindings.cpp  sw_key_bindings.hpp  sw_new.cpp  sw_new.hpp  sw_preferences.cpp  sw_preferences.hpp
modules/util/: sqlite_util.cpp  sqlite_util.hpp  util.cpp  util.hpp
